--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="subtr">Subtract</string>
     <string name="mult">Multiply</string>
     <string name="div">Divide</string>
-
+    <string name="enter_hint">Enter a number</string>
 </resources>
